tests/paczka1/small_fuzzy/55732907.err
Error in line 2: haA A687 41,0
Error in line 5: ckb5cnr S812 32,4
Error in line 6: ckb5cnr S161 46,8
